<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/add_course_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/courseNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name" />

        <EditText
            android:id="@+id/instructorNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instructor_name" />

        <Button
            android:id="@+id/uploadRosterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_roster" />

        <Button
            android:id="@+id/viewCoursesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Courses"
            app:layout_constraintTop_toBottomOf="@id/uploadRosterButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/addExamButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_exam"
            app:layout_constraintTop_toBottomOf="@id/viewCoursesButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
